<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Blood For Lives</string>
    <string name="str_title">Blood For Lives</string>
    <string name="action_settings">Settings</string>
    <string name="str_welcome">Welcome!</string>
    <string name="register">Register a new user</string>
    <string name="login">Log In</string>
    <string name="title_activity_user_registration">UserRegistration</string>
    <string name="email_id">Email</string>
    <string name="user_fname">First Name</string>
    <string name="user_lname">Last Name</string>
    <string name="password">Password</string>
    <string name="contact">Contact</string>
    <string name="blood_group">Blood Group</string>
    <string name="address">Area</string>
    <string name="title_activity_user_login">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="user_profile">Profile</string>
    <string name="dob">Birthdate</string>
    <string name="search_donor">Search</string>
    <string name="title_activity_home">Home</string>
    <string name="history">History</string>
    <string name="messages">Messages</string>
    <string name="title_activity_make_search">MakeSearch</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="loading">Loading...</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="update">Update</string>

</resources>