<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/awsomebg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bloodforlives.HomeActivity" >

    <TextView
        android:id="@+id/update_fname_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="50dp" />

    <Button
        android:id="@+id/profilebutton"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        android:padding="30dp"
        android:paddingBottom="30dp"
        android:text="@string/user_profile"
        android:textColor="#ffffff"
        android:textSize="25dp" />
    
    <Button
        android:id="@+id/searchbutton"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/profilebutton"
        android:layout_marginTop="30dp"
        android:text="@string/search_donor"
        android:textColor="#ffffff"
        android:textSize="25dp" />

</RelativeLayout>