<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/abc_ab_share_pack_holo_light"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sample.sampleworld.UserRegistration" >

    <TextView
        android:id="@+id/fname_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="25dp"
        android:text="@string/user_fname" />
    <EditText
        android:id="@+id/fname_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/fname_textview"
        android:layout_alignTop="@id/fname_textview"
        android:background="@drawable/abc_ab_bottom_solid_light_holo"
        android:inputType="textPersonName" />
    
    <TextView
        android:id="@+id/lname_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fname_textview"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/user_lname" />
    <EditText
        android:id="@+id/lname_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fname_edittext"
        android:layout_toRightOf="@id/lname_textview"
        android:layout_alignTop="@id/lname_textview"
        android:layout_alignLeft="@id/fname_edittext"
        android:background="@drawable/abc_ab_bottom_solid_light_holo"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/mail_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lname_textview"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/email_id" />
    <EditText
        android:id="@+id/mail_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mail_edittext"
        android:layout_toRightOf="@id/mail_textview"
        android:layout_alignTop="@id/mail_textview"
        android:layout_alignLeft="@id/fname_edittext"
        android:background="@drawable/abc_ab_bottom_solid_light_holo"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/blood_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mail_textview"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/blood_group" />
    <Spinner
        android:id="@+id/blood_spinner"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_below="@id/mail_edittext"
        android:layout_toRightOf="@id/blood_textview"
        android:layout_alignTop="@id/blood_textview"
        android:layout_alignLeft="@id/fname_edittext"
         />
    
    <TextView
        android:id="@+id/address_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/blood_textview"
        android:text="@string/address" />
    <EditText
        android:id="@+id/address_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/blood_spinner"
        android:layout_toRightOf="@id/address_textview"
        android:layout_alignTop="@id/address_textview"
        android:layout_alignLeft="@id/fname_edittext"
        android:background="@drawable/abc_ab_bottom_solid_light_holo"
        android:inputType="textPostalAddress" />
    
    <TextView
        android:id="@+id/dob_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/address_textview"
        android:text="@string/dob" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:layout_marginBottom="78dp"
        android:text="@string/register" />

    <DatePicker
        android:id="@+id/dob_datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/address_edittext"
        android:layout_alignLeft="@id/fname_edittext"
         />

</RelativeLayout>